Working on examples, ring docs, table styles

--- a/src/pages/docs/background-color.mdx
+++ b/src/pages/docs/background-color.mdx
@@ -42,7 +42,7 @@ Control the background color of an element using the `.bg-{color}` utilities.
 <button class="bg-blue-500 ...">Button</button>
 ```
 
-### <Heading badge="v1.4.0+">Changing opacity</Heading>
+### Changing opacity
 
 Control the opacity of an element's background color using the `.bg-opacity-{amount}` utilities.
 
