--- a/src/pages/docs/border-color.mdx
+++ b/src/pages/docs/border-color.mdx
@@ -44,7 +44,7 @@ Control the border color of an element using the `.border-{color}` utilities.
 <input class="border border-red-500 ...">
 ```
 
-### <Heading badge="v1.4.0+">Changing opacity</Heading>
+### Changing opacity
 
 Control the opacity of an element's border color using the `.border-opacity-{amount}` utilities.
 
