--- a/src/pages/docs/divide-color.mdx
+++ b/src/pages/docs/divide-color.mdx
@@ -53,7 +53,7 @@ Control the border color between elements using the `divide-{color}` utilities.
 </div>
 ```
 
-### <Heading badge="v1.4.0+">Changing opacity</Heading>
+### Changing opacity
 
 Control the opacity of borders between elements using the `.divide-opacity-{amount}` utilities.
 
