--- a/src/pages/docs/font-size.mdx
+++ b/src/pages/docs/font-size.mdx
@@ -122,7 +122,7 @@ By default Tailwind provides 10 `font-size` utilities. You change, add, or remov
   }
 ```
 
-### <Heading badge="v1.3.0+">Providing a default line-height</Heading>
+### Providing a default line-height
 
 You can provide a default line-height for each of your font-sizes using a tuple of the form `[fontSize, lineHeight]` in your `tailwind.config.js` file.
 
@@ -142,7 +142,7 @@ module.exports = {
 
 We already provide default line heights for each `.text-{size}` class.
 
-### <Heading badge="v1.7.0+">Providing a default letter-spacing</Heading>
+### Providing a default letter-spacing
 
 If you also want to provide a default letter-spacing value for a font size, you can do so using a tuple of the form `[fontSize, { letterSpacing, lineHeight }]` in your `tailwind.config.js` file.
 
