--- a/src/pages/docs/outline.mdx
+++ b/src/pages/docs/outline.mdx
@@ -33,7 +33,7 @@ It is highly recommended to apply your own focus styling for accessibility when 
 
 The `outline-none` utility is implemented using a transparent outline under the hood to ensure elements are still visibly focused to [Windows high contrast mode](https://blogs.windows.com/msedgedev/2020/09/17/styling-for-windows-high-contrast-with-new-standards-for-forced-colors/) users.
 
-## <Heading badge="v1.9.0+">Dotted outlines</Heading>
+## Dotted outlines
 
 Use the `outline-white` and `outline-black` utilities to add a 2px dotted border around an element with a 2px offset. These are useful as an accessible general purpose custom focus style if you don't want to design your own.
 
@@ -53,7 +53,7 @@ Use the `outline-white` and `outline-black` utilities to add a 2px dotted border
 
 ## Customizing
 
-### <Heading badge="v1.9.0+">Outlines</Heading>
+### Outlines
 
 By default Tailwind provides three outline utilities. You can customize these by editing the `theme.outline` section of your `tailwind.config.js` file.
 
