--- a/src/pages/docs/placeholder-color.mdx
+++ b/src/pages/docs/placeholder-color.mdx
@@ -45,7 +45,7 @@ Control the placeholder color of an element using the `.placeholder-{color}` uti
 <input class="placeholder-red-300 border border-red-400" placeholder="jane@example.com">
 ```
 
-### <Heading badge="v1.4.0+">Changing opacity</Heading>
+### Changing opacity
 
 Control the opacity of an element's placeholder color using the `.placeholder-opacity-{amount}` utilities.
 
