--- a/src/pages/docs/text-color.mdx
+++ b/src/pages/docs/text-color.mdx
@@ -42,7 +42,7 @@ Control the text color of an element using the `.text-{color}` utilities.
 <input class="text-purple-600 ...">
 ```
 
-### <Heading badge="v1.4.0+">Changing opacity</Heading>
+### Changing opacity
 
 Control the opacity of an element's text color using the `.text-opacity-{amount}` utilities.
 
