--- a/src/pages/docs/border-width.mdx
+++ b/src/pages/docs/border-width.mdx
@@ -85,7 +85,7 @@ Use the `.border-{side}`, `.border-{side}-0`, `.border-{side}-2`, `.border-{side
 <div class="border-l-2 border-gray-600 ..."></div>
 ```
 
-## <Heading badge="v1.3.0+">Between elements</Heading>
+## Between elements
 
 You can also add borders between child elements using the `divide-{x/y}-{width}` and `divide-{color}` utilities.
 
