--- a/src/pages/docs/line-height.mdx
+++ b/src/pages/docs/line-height.mdx
@@ -56,7 +56,7 @@ Use the `leading-none`, `leading-tight`, `leading-snug`, `leading-normal`, `lead
 <p class="leading-loose ...">Lorem ipsum dolor sit amet ...</p>
 ```
 
-## <Heading badge="v1.2.0+">Fixed line-heights</Heading>
+## Fixed line-heights
 
 Use the `leading-{size}` utilities to give an element a fixed line-height, irrespective of the current font-size. These are useful when you need very precise control over an element's final size.
 
